  The following code now raises a SyntaxError:  foo(a = i for i in range(10))

- SF Bug #976608: fix SystemError when mtime of an imported file is -1.

- SF Bug #887946: fix segfault when redirecting stdin from a directory.
  Provide a warning when a directory is passed on the command line.

- Fix segfault with invalid coding.

Extension Modules
-----------------

- Patch #1309009, Fix segfault in pyexpat when the XML document is in latin_1,
  but Python incorrectly assumes it is in UTF-8 format

- Fix parse errors in the readline module when compiling without threads.

Library
-------

- urllib.unquote() now handles Unicode strings correctly.  Formerly, it would
  either ignore the substitution or raise UnicodeDecodeError.

- SF #1313496:  the bisect module now accepts named arguments.

- Bug #729103: pydoc.py: Fix docother() method to accept additional
  "parent" argument.

- Patch #1300515: xdrlib.py: Fix pack_fstring() to really use null bytes
  for padding.

- Bug #1296004: httplib.py: Limit maximal amount of data read from the
  socket to avoid a MemoryError on Windows.


What's New in Python 2.4.2 final?
=================================

*Release date: 28-SEP-2005*

Extension Modules
-----------------

- Patches #1298449 and #1298499: Add some missing checks for error
  returns in cStringIO.c.

- Patch #1297028: fix segfault if call type on MultibyteCodec,
  MultibyteStreamReader, or MultibyteStreamWriter.

Tests
-----

- Fixed failure in test_macfs on Mac OS X 10.4 (Tiger), which
  apparently doesn't allow the creation time to be set later than the
  modification time.  Fixed by changing the test data.

Build
-----

- The Windows .msi files are now compressed using lzx:21. This produces a 
  significantly smaller installer.


What's New in Python 2.4.2c1?
=============================

*Release date: 21-SEP-2005*

Core and builtins
-----------------

- SF bug #1163563: the original fix for bug #1010677 ("thread Module